# aichatlog

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  README.md  README.zh-CN.md
.github/workflows/: plugin-ci.yml  release.yml  server-ci.yml
docs/: knowledge-extraction.md  product-design.md  project-organization.md
plugins/claude-code/: README.md  README.zh-CN.md  pyproject.toml
plugins/claude-code/.claude-plugin/: marketplace.json  plugin.json
plugins/claude-code/.claude-plugin/commands/: web.md
plugins/claude-code/.claude-plugin/hooks/: hooks.json
plugins/claude-code/.claude-plugin/scripts/: aichatlog.py  dashboard.html
plugins/claude-code/.claude-plugin/skills/aichatlog/: SKILL.md
plugins/claude-code/src/aichatlog/: __init__.py  core.py  dashboard.html
plugins/claude-code/tests/: test_plugin.py
protocol/: README.md  README.zh-CN.md  api.openapi.yaml  conversation.schema.json
protocol/examples/: chatgpt-conversation.json  claude-code-conversation.json
server/: docker-compose.yml
shared/: aichatlog-ui.css  aichatlog-ui.js  build.py
