[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "aichatlog-plugin"
version = "0.5.0"
description = "Auto-sync Claude Code conversations to your knowledge base"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "Vincent Leon"}]
keywords = ["claude-code", "sync", "obsidian", "knowledge-base", "conversation"]
dependencies = ["jinja2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/aichatlog/aichatlog"
Repository = "https://github.com/aichatlog/aichatlog"

[project.scripts]
aichatlog = "aichatlog.core:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aichatlog = ["dashboard.html"]
